@@ -1,12 +1,7 @@
 {
-  "count": 108,
-  "uniques": 62,
+  "count": 113,
+  "uniques": 66,
   "clones": [
-    {
-      "timestamp": "2025-10-29T00:00:00Z",
-      "count": 3,
-      "uniques": 3
-    },
     {
       "timestamp": "2025-10-30T00:00:00Z",
       "count": 9,
@@ -71,6 +66,11 @@
       "timestamp": "2025-11-11T00:00:00Z",
       "count": 20,
       "uniques": 14
+    },
+    {
+      "timestamp": "2025-11-12T00:00:00Z",
+      "count": 8,
+      "uniques": 7
     }
   ]
 }
