@@ -1,3 +1,12 @@
+2025-11-12T12:32:16Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19297551271 # 1301
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
+* notice: last 14d: unq all: 66 113
+* notice: prev accum: outdated-unq outdated-all / unq all: 4964 9912 / 5038 10020
+* notice: next accum: outdated-unq outdated-all / unq all: 4967 9915 / 5045 10028
+* notice: prev exec diff / last date diff / accum: unq all: +7 +8 -0 -0 / +7 +8 -0 -0 / 7 8
+* notice: removed / changed dates: [2025-10-29] / [2025-11-12]
+
 2025-11-12T01:12:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19283122903 # 1300
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-12
